fixed align text

--- a/src/components/common/March/style.less
+++ b/src/components/common/March/style.less
@@ -36,6 +36,7 @@
   font-size: 12px;
   font-family: roboto;
   font-weight: normal;
+  text-align: left;
 }
 .march-disabled-element{
   pointer-events: none;
